Add login and registration (front+back)

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,9 +1,7 @@
 
-/*
-------------------------------------------------
------------- SVG
-------------------------------------------------
-*/
+/* ---------------------------
+   SVG in the carousel
+--------------------------- */
 
 .carousel img {
     width: 400px;
